hide overflowing titles, fixes #126

--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -45,13 +45,16 @@
       display: block;
       width: 56%;
       float: left;
-      margin: 1em 0 0 0;
+      padding: .5em 0em;
       line-height: 1em;
 
       .title {
         @include small-bold-title;
         line-height: 1.25;
         display: block;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       .description {
         font-size: .9em;
